font style web safe, styling of content updated

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.css">
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
@@ -38,8 +39,79 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-12 col-sm-12 col-xs-12">
-                        <h3 class="font-bold py-3">Diāna Silarāja</h3>
+                        <p class="font-bold py-3">Diāna Silarāja</p>
                 </div>
+                <div class="container">
+                        <div class="row">    
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                       
+                             <div class="testimonial col-md-12">
+                                                <!--Avatar-->
+                                                <div class="avatar">
+                                                <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+                                               </div>
+                                                <!--Content-->
+                                                <h4 class="text-font">Personīgās izaugsmes trenere</h4>
+                                                <h4 class="blue-text font-bold">Rezultātu, Mēŗķu un Iedvesmas koučs</h4>
+                                                <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+                             </div>
+                             <div class="testimonial col-md-12">
+                                    <!--Avatar-->
+                                    <div class="avatar">
+                                    <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+                                   </div>
+                                    <!--Content-->
+                                    <h4 class="text-font">Komandu izaugsmes trenere</h4>
+                                    <h4 class="blue-text font-bold">Radošo treniņu trenere Klientu apkalpošanas un pārdošanas komandām</h4>
+                                    <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+                 </div>
+                 <div class="testimonial col-md-12">
+                        <!--Avatar-->
+                        <div class="avatar">
+                        <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+                       </div>
+                        <!--Content-->
+                        <h4 class="text-font">Pārdošanas freelancer</h4>
+                        <h4 class="blue-text font-bold">Ārpusštata Pārdošanas speciālists</h4>
+                        <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+     </div>
+
+     <div class="testimonial col-md-12">
+            <!--Avatar-->
+            <div class="avatar">
+            <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+           </div>
+            <!--Content-->
+            <h4 class="text-font">Grieķijas ceļojumu eksperts</h4>
+            <h4 class="blue-text font-bold">Konsultācijas, padomi, maršruti un VIP piedāvājumi jūsu un jūsu komandas atpūtai Grieķijā</h4>
+            <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+</div>
+<div class="testimonial col-md-12">
+        <!--Avatar-->
+        <div class="avatar">
+        <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+       </div>
+        <!--Content-->
+        <h4 class="text-font">Ideju ģeneratos</h4>
+        <h4 class="blue-text font-bold">Pārdošanas, Mārketinga un Biznesa stratēģiju izveide - ģenerējot unikālas idejas un stratēģiju tās realizēt</h4>
+        <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+</div>
+
             </div>
         </div>
      
