--- a/pasizaugsme.html
+++ b/pasizaugsme.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.css">
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
@@ -38,8 +39,22 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-12 col-sm-12 col-xs-12">
-                        <h3 class="font-bol py-3">Personīgās izaugsmes treniņi<br> <h4>(individuālais koučings)</h4></h3>
+                        <p class="font-bol py-3">Personīgās izaugsmes treniņi<br> <h2>(individuālais koučings)</h2></p>
                 </div>
+                <div class="testimonial col-md-12">
+                        <!--Avatar-->
+                        <div class="avatar">
+                        <img src="imgMine/es.jpg" class="rounded-circle img-fluid">
+                       </div>
+                        <!--Content-->
+                        <h4 class="text-font">Personīgās izaugsmes trenere</h4>
+                        <h4 class="blue-text font-bold">Rezultātu, Mēŗķu un Iedvesmas koučs</h4>
+                        <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+     </div>
+
             </div>
         </div>
      
