--- a/projekti.html
+++ b/projekti.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.css">
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
@@ -38,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-12 col-sm-12 col-xs-12">
-                        <h3 class="font-bold py-3">Projekti</h3>
+                        <p class="font-bold py-3">Projekti</p>
                 </div>
             </div>
         </div>
