font style set, coaching page set

--- a/Atsauksmes.html
+++ b/Atsauksmes.html
@@ -114,9 +114,11 @@
     <h6 class="blue-text font-bold">Dizaina papīrlietu veikals "Manilla"</h6>
     <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
 </div>           
-   
+<div class="footer">
+    &copy; 2018 - Diana Silaraja - all rights reserved
+</div>
        </div>
-                <!--Slides-->
+               
        </div>
     </div>
 
