--- a/komandam.html
+++ b/komandam.html
@@ -68,7 +68,9 @@
             </div>
         </div>
      
-   
+        <div class="footer">
+            &copy; 2018 - Diana Silaraja - all rights reserved
+        </div>  
 </div>
 </div>
 </div>
