--- a/pasizaugsme.html
+++ b/pasizaugsme.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Overlock' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
-<body>
+<body [if IE]font-style="Ovelock"[endif]>
 <div class="container-fluid">
 <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
@@ -39,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-12 col-sm-12 col-xs-12">
-                        <p class="font-bol py-3">Personīgās izaugsmes treniņi<br> <h2>(individuālais koučings)</h2></p>
+                        <p class="font-bol py-3">Personīgās izaugsmes treniņi<br> <span>(individuālais koučings)</span></p>
                 </div>
                 <div class="testimonial col-md-12">
                         <!--Avatar-->
@@ -48,16 +49,49 @@
                        </div>
                         <!--Content-->
                         <h4 class="text-font">Personīgās izaugsmes trenere</h4>
-                        <h4 class="blue-text font-bold">Rezultātu, Mēŗķu un Iedvesmas koučs</h4>
-                        <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+                        <h4 class="blue-text font-bold"><strong>Rezultātu, Mēŗķu koučs</strong></h4>
+                        <p class="text-font text-coach"><i class="fa fa-quote-left"></i> 
+                            Daudzi kouči jums teiks, ka ir nepieciešamas vismaz 4 tikšanās, lai sasniegtu rezultātu, bet vislabāk uzreiz 
+                            vienoties par 10 sesiju ciklu. Ne vienmēr iemesls ir tieksme nopelnīt vairāk. Visbiežāk, cilvēkam ir nepieciešams
+                            laiks, lai atbrīvotos un uzticētos koučam tā, lai tiešām sesija nestu rezultātu. Tas nav viegli un tas nenotiek uzreiz.
+                            Koučings ir tāda īpaša lieta, es pat dažreiz gribētu to saukt par tādu kā maģiju. Novērojot, ka kaut kādā laika periodā
+                            manam klientam piepildās identiski viss tā, kā mēs esam uzrakstījuši. Tāpēc mani, klienti ir nosaukuši par "Rezultātu Kouču".
+                            Mans talants ir noturēt klientu uz viņa fokusu. Kā lielisks biznesa treneris ir teicis "Fokuss ir tas, kas palīdz stabili turēties uz kājām, 
+                            virzīties uz mērķi un to arī sasniegt". Es palīdzu atrast fokusu, atgriezties pie noklīdušā fokusā, iedrošināt noticēt sev
+                            un turēt fokusu uz šo ticību, tadejādi vairojot pārliecību par sevi un savām izvēlēm.<br>
+<br>
+                            Mani klienti ir tie, kas ir nonākuši strupceļā un paši vair nevar atrast pareizo izeju. Tie, kuri vēlas parmaiņas dzīvē, 
+                            taču nav pārleicinātu par to, kādas tieši pārmaiņas viņi grib. Tie, kas ir jaunu izaicinājumu, darba, iedvesmas un izvēles priekšā, 
+                            tie, kuriem nepieciešams iedrošinājums uzticēties un noticēt sev un savai izvēlei.<br>
+<br>
+                            Ja Tu sevi saskati augstāk aprakstītajā, tad noteikti es būsu Tavs īstais koučs un es būšu tas, kuram Tu vari uzticēt pat to,
+                            ko brīžiem baidies izteikt skaļi! Patiess koučs, nenosoda, nevērtē un nevelk paralēles ar savu pasaules redzējumu. Patiess
+                            koučs pilnībā pieņem Tavu pasauli, Tavu redzējumu un palīdz atrast atbildes Tavā "koferītī", jo pats efektīvākais risinājums ir tas, 
+                            kur Tu izmanto to, kas Tev jau ir, nevis aizņemies no citas pasaules, kur viss ir pavisam savādāk kā Tavējā!<br>
+<br>
+</p>
+<p class="text-coach seperate-text">
+                           Esi atvērts un drošs, pieraksti manu numuru un e-pastu 
+                           (mob: <a class="text-coach seperate-text action-text" 
+                           href="sms://+14035550185?body=I%27m%20interested%20in%20your%20product.%20Please%20contact%20me.">29544718</a>
+                            un e-pasts: <a class="text-coach seperate-text action-text" href="mailto:diana.silaraja@gmail.com?Subject=Hello%20again" target="_top">diana.silaraja@gmail.com</a>).
+                            Sazinies! Neatliec uz nākamo nedēļu, jo jau nākamajā nedēļā
+                            jau Tava dzīve un ikdiena var mainīties ;)
+</p>
+<div class="container">
+    <div class="row">
+        <div class="bottom-image col-sm-12 col-md-12 col-xs-12">
+            <img src="imgMine/coaching1.jpg" class="rounded-circle img-fluid">
+        </div>
+    </div>
+</div>
      </div>
 
             </div>
         </div>
-     
+        <div class="footer">
+                &copy; 2018 - Diana Silaraja - all rights reserved
+            </div>   
    
 </div>
 </div>
