scrollbar, read font

--- a/komandam.html
+++ b/komandam.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
@@ -49,11 +50,12 @@
                         <!--Content-->
                         <h4 class="text-font">Komandu izaugsmes trenere</h4>
                         <h4 class="blue-text font-bold">Radošo treniņu trenere Klientu apkalpošanas un pārdošanas komandām</h4>
-                        <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
+                        <p class="text-font read-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus quis magnam autem veritatis modi, ratione blanditiis culpa vero rem explicabo voluptas quo alias numquam laboriosam, ex nisi deleniti! Nostrum.
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel amet aperiam delectus nulla! Optio libero, eligendi debitis repellat itaque ratione harum. Nemo quisquam in, ut ea cupiditate quas iure.
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptate. Inventore est deleniti ad et magnam quae, omnis incidunt quam odio eaque, itaque aut soluta officia, ipsa animi illum pariatur.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
-     </div>
+     
+                        </div>
 
      <div class="container video">
          <div class="row">
@@ -61,7 +63,7 @@
                     <iframe src="https://player.vimeo.com/video/253589839" 
                     width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
                 </iframe>
-                   <p ><a class="link-text" href="http://www.radositrenini.on.lv/">Treniņu apraksti un cenas</a></p>
+                   <p ><a class="link-text" href="http://www.radositrenini.on.lv/">Treniņu apraksts un cenas</a></p>
              </div>
          </div>
      </div>
