--- a/pasizaugsme.html
+++ b/pasizaugsme.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="MDB Free\css\mdb.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Overlock' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="style/css.css">
   
 </head>
@@ -50,7 +50,7 @@
                         <!--Content-->
                         <h4 class="text-font">Personīgās izaugsmes trenere</h4>
                         <h4 class="blue-text font-bold"><strong>Rezultātu, Mēŗķu koučs</strong></h4>
-                        <p class="text-font text-coach"><i class="fa fa-quote-left"></i> 
+                        <p class="text-font read-font"><i class="fa fa-quote-left"></i> 
                             Daudzi kouči jums teiks, ka ir nepieciešamas vismaz 4 tikšanās, lai sasniegtu rezultātu, bet vislabāk uzreiz 
                             vienoties par 10 sesiju ciklu. Ne vienmēr iemesls ir tieksme nopelnīt vairāk. Visbiežāk, cilvēkam ir nepieciešams
                             laiks, lai atbrīvotos un uzticētos koučam tā, lai tiešām sesija nestu rezultātu. Tas nav viegli un tas nenotiek uzreiz.
@@ -70,18 +70,18 @@
                             kur Tu izmanto to, kas Tev jau ir, nevis aizņemies no citas pasaules, kur viss ir pavisam savādāk kā Tavējā!<br>
 <br>
 </p>
-<p class="text-coach seperate-text">
+<p class="text-coach read-font seperate-text">
                            Esi atvērts un drošs, pieraksti manu numuru un e-pastu 
-                           (mob: <a class="text-coach seperate-text action-text" 
+                           (mob: <a class="text-coach read-font seperate-text action-text" 
                            href="sms://+14035550185?body=I%27m%20interested%20in%20your%20product.%20Please%20contact%20me.">29544718</a>
-                            un e-pasts: <a class="text-coach seperate-text action-text" href="mailto:diana.silaraja@gmail.com?Subject=Hello%20again" target="_top">diana.silaraja@gmail.com</a>).
+                            un e-pasts: <a class="text-coach read-font seperate-text action-text" href="mailto:diana.silaraja@gmail.com?Subject=Hello%20again" target="_top">diana.silaraja@gmail.com</a>).
                             Sazinies! Neatliec uz nākamo nedēļu, jo jau nākamajā nedēļā
                             jau Tava dzīve un ikdiena var mainīties ;)
 </p>
 <div class="container">
     <div class="row">
         <div class="bottom-image col-sm-12 col-md-12 col-xs-12">
-            <img src="imgMine/coaching1.jpg" class="rounded-circle img-fluid">
+            <img src="" class="rounded-circle img-fluid">
         </div>
     </div>
 </div>
