--- a/Atsauksmes.html
+++ b/Atsauksmes.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row">
                 <div class="content col-md-12 col-sm-12 col-xs-12">
-                        <p class="first-title font-bold py-3">Atsauksmes <br> <span><h4 class="second-title">komandu atziņas pēc treniņa</h4></span></p>
+                        <p class="first-title font-bold py-3">Atsauksmes</p>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
              <div class="testimonial col-md-12">
                                 <!--Avatar-->
                                 <div class="avatar">
-                                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(26).jpg" class="rounded-circle img-fluid">
+                                <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\KOLUMBS_logo.jpg" class=" img-fluid">
                                </div>
                                 <!--Content-->
                                 <h4 class="text-font">Kolumbs komanda</h4>
@@ -67,7 +67,7 @@
                 <div class="testimonial col-md-12">
                                 <!--Avatar-->
                                 <div class="avatar">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(27).jpg" class="rounded-circle img-fluid">
+                                    <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\TIC.jpg" class=" img-fluid">
                                 </div>
                                 <!--Content-->
                                 <h4 class="text-font">TIC komanda</h4>
@@ -77,7 +77,7 @@
             <div class="testimonial col-md-12">
                            <!--Avatar-->
                                 <div class="avatar">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="rounded-circle img-fluid">
+                                    <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\parks.jpg" class=" img-fluid">
                                 </div>
                                 <!--Content-->
                                 <h4 class="text-font">"PARKS" viesmīļu komanda</h4>
@@ -87,7 +87,7 @@
             <div class="testimonial col-md-12">
                 <!--Avatar-->
                      <div class="avatar">
-                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="rounded-circle img-fluid">
+                         <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\alta.jpg" class="img-fluid">
                      </div>
                      <!--Content-->
                      <h4 class="text-font">"ALTA" biedri</h4>
@@ -97,7 +97,7 @@
  <div class="testimonial col-md-12">
     <!--Avatar-->
     <div class="avatar">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(27).jpg" class="rounded-circle img-fluid">
+        <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\monika.jpg" class=" img-fluid">
     </div>
     <!--Content-->
     <h4 class="text-font">"MONIKA" viesmīļu komanda</h4>
@@ -107,13 +107,44 @@
 <div class="testimonial col-md-12">
     <!--Avatar-->
     <div class="avatar">
-    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(26).jpg" class="rounded-circle img-fluid">
+    <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\manilla.jpg" class=" img-fluid">
    </div>
     <!--Content-->
     <h4 class="text-font">"Manilla" komanda</h4>
     <h6 class="blue-text font-bold">Dizaina papīrlietu veikals "Manilla"</h6>
     <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
-</div>           
+</div>     
+<div class="testimonial col-md-12">
+    <!--Avatar-->
+    <div class="avatar">
+    <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\mogotel.jpg" class=" img-fluid">
+   </div>
+    <!--Content-->
+    <h4 class="text-font">Mogotel</h4>
+    <h6 class="blue-text font-bold">Wellton, Rixwell viesnīcu ķēde</h6>
+    <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+</div>  
+<div class="testimonial col-md-12">
+    <!--Avatar-->
+    <div class="avatar">
+    <img src="" class=" img-fluid">
+   </div>
+    <!--Content-->
+    <h4 class="text-font">Beaty SPA</h4>
+    <h6 class="blue-text font-bold">Skaistumkopšanas salons Jūrmalā</h6>
+    <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+</div>   
+<div class="testimonial col-md-12">
+    <!--Avatar-->
+    <div class="avatar">
+    <img src="C:\Users\Diana\CODES\myWebsite\imgMine\reviews\otraelpa.jpg" class=" img-fluid">
+   </div>
+    <!--Content-->
+    <h4 class="text-font">Otra Elpa</h4>
+    <h6 class="blue-text font-bold">veikals</h6>
+    <p class="text-font"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
+</div>    
+  
 <div class="footer">
     &copy; 2018 - Diana Silaraja - all rights reserved
 </div>
